--- a/script.ipynb
+++ b/script.ipynb
@@ -2,132 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import json"
+    "import perfil as pf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = './database/Fatura_Itau_20250226-102719.json'\n",
-    "#Ler o dicionario \"gastos\" do arquivo json\n",
-    "with open(file) as f:\n",
-    "    data = json.load(f)\n",
-    "df = pd.DataFrame(data['gastos'])"
+    "upload_xls = 'database/exporexcel.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(6967.5199999999995)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['valor'] = df['valor'].replace('[,]', '.', regex=True).astype(float)\n",
-    "\n",
-    "df['valor'].sum()"
+    "a = pf.Itens()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data</th>\n",
-       "      <th>descrição</th>\n",
-       "      <th>valor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>27/08</td>\n",
-       "      <td>FERREIRA COSTA</td>\n",
-       "      <td>113.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10/09</td>\n",
-       "      <td>PAGUE MENOS 852</td>\n",
-       "      <td>53.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>22/01</td>\n",
-       "      <td>IFOOD *IFD*supermerc</td>\n",
-       "      <td>88.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10/09</td>\n",
-       "      <td>FERREIRA COS-CT</td>\n",
-       "      <td>89.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30/01</td>\n",
-       "      <td>CROMIA ACRILICO</td>\n",
-       "      <td>156.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    data             descrição   valor\n",
-       "0  27/08        FERREIRA COSTA  113.99\n",
-       "1  10/09       PAGUE MENOS 852   53.99\n",
-       "2  22/01  IFOOD *IFD*supermerc   88.13\n",
-       "3  10/09       FERREIRA COS-CT   89.88\n",
-       "4  30/01       CROMIA ACRILICO  156.00"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head()"
+    "a.from_excel('exportest.xlsx',True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
